# daq-cmake

./: CMakeLists.txt  README.md
.github/workflows/: dunedaq-develop-cpp-ci.yml  dunedaq-develop-self-hosted-runner-cpp-ci.yml  dunedaq-v4-cpp-ci.yml
cmake/: DAQ.cmake  Doxyfile.in.cmake  Findcetlib.cmake  Findcetlib_except.cmake  daq-Doxygen.cmake  daq-buildtoolsConfig.cmake.in  daq-cmakeConfig.cmake.in  header.html.in.cmake  moo.cmake  moo2g.cmake
config/templates/: __init__.py  apprenameme.cxx  confgen.jsonnet  module.cpp  package_gen  packageapp_gen.py  pythonbindingsrenameme.cpp  registrators.hpp
configs/: Config.cmake.in
docs/: CmakeFunctions.md  Creating-a-new-package-under-v2.3.0.md  Creating-a-new-package.md  README.md  SchemaAndCodeGen.md
python/: mootools.py
python/dunedaq/: env.py
scripts/: create_dunedaq_package  create_dunedaq_package.py
scripts/templates/: Placeholder_test.cxx  RenameMe.cpp  RenameMe.hpp  confgen.jsonnet  module.cpp  package_example_config.json  package_gen  packageapp_gen.py  renameme.cpp  renameme.cxx  renameme.jsonnet  renamemeinfo.jsonnet
toylibrary/: CMakeLists.txt
toylibrary/cmake/: toylibraryConfig.cmake.in
toylibrary/config/: toy.json
toylibrary/include/toylibrary/: IntPrinter.hpp  ValueWrapper.hpp
toylibrary/include/toylibrary/detail/: ValueWrapper.hxx
toylibrary/pybindsrc/: module.cpp  toy_wrapper.cpp
toylibrary/pysrc/: toy_wrapper.cpp
toylibrary/python/: toymod.py
toylibrary/python/toylibrary/: __init__.py
toylibrary/python/toylibrary/play/: __init__.py
toylibrary/python/toylibrary/wind/: __init__.py
toylibrary/schema/: toy.jsonnet
toylibrary/scripts/: toyscript.py
toylibrary/src/: IntPrinter.cpp
toylibrary/test/apps/: toylibrary_test_program.cxx
toylibrary/unittest/: ValueWrapper_test.cxx
